# scratch_kit

./: README.md  passgen.py
crypt/: dhke_demo.py  rsa-keypair-demo-script.py
fintools/: mortgage_calculator.py  mortgage_calculator.py.txt  mortgage_invest_compare.py
prompts/: CLAUDE.md  README.md  t3chat.md
tools/: imgsorter.py  pingdebug.py  pingdebug_listen.py  scsi_pgr.py  testip.py  wipedrive_linux.py
tools/imgshuffle/: README.md  imgshuffle.py
tools/lancache-dns/: lancache_to_dnsmasq.py
tools/vscode_profiles/: NathanDev.code-profile
tools/wanip/: README.md  pyproject.toml
tools/wanip/src/wanip/: cli.py
tools/wanip/src/wanip.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tools/wanip/tests/: tests_cli.py
